--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class=" row d-flex justify-content-around text-align-center ">
        
         <div class="col">
-            <img src="../prjimages/Room_Deluxe_Room_.jpg" width="400px" height="200px">
+            <img src="../Room-booking/picsba/Room_Deluxe_Room_.jpg" width="400px" height="200px">
             <div class="card-header">
                 <h3>Deluxe Room</h3>
             </div>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="col">
-            <img src="../prjimages/suiteroom2.jfif" width="400px"  height="200px">
+            <img src="../Room-booking/picsba/suiteroom2.jfif" width="400px"  height="200px">
             <div class="card-header">
                 <h3>Suite Room</h3>
             </div>
@@ -181,7 +181,7 @@
     <h4 class="pt-4">Select Amenities</h4>
     <div class="d-flex justify-content-around text-align-center row">
         <div class="col">
-            <img src="../prjimages/ac.jfif" width="310px" height="210px">
+            <img src="../Room-booking/picsba/ac.jfif" width="310px" height="210px">
             <div class="card-header">
                 <h3>AC</h3>
             </div>
@@ -190,7 +190,7 @@
             </div>
         </div>
         <div class="col">
-            <img src="../prjimages/locker.jpg" width="210px" height="210px">
+            <img src="../Room-booking/picsba/locker.jpg" width="210px" height="210px">
             <div class="card-header">
                 <h3>Digital Lock</h3>
             </div>
